airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T130646.724541+0000/task_id=run_pipeline_5/attempt=1.log
[2026-06-03T13:06:48.944+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:06:48.982+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.996+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.997+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-03T13:06:49.017+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_5> on 2026-06-03 13:06:46.724541+00:00
[2026-06-03T13:06:49.026+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_5', 'manual__2026-06-03T13:06:46.724541+00:00', '--job-id', '147', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmpfbf7m5dc']
[2026-06-03T13:06:49.029+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2364) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:06:49.030+0000] {standard_task_runner.py:91} INFO - Job 147: Subtask run_pipeline_5
[2026-06-03T13:06:49.031+0000] {standard_task_runner.py:63} INFO - Started process 2370 to run task
[2026-06-03T13:06:49.086+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T13:06:46.724541+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:06:49.192+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_5' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T13:06:46.724541+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T13:06:46.724541+00:00'
[2026-06-03T13:06:49.193+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:06:49.215+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:06:49.217+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 5']
[2026-06-03T13:06:49.229+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:07:12.495+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:12.496+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:12.498+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:07:12.499+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:12.500+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:07:12.501+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:07:12.502+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:07:12.503+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:07:12.504+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:07:12.505+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:12.506+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:12.508+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:07:12.509+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:12.510+0000] {subprocess.py:93} INFO - Running pipeline: s3_to_postgres_pipeline (storage_to_db)
[2026-06-03T13:07:12.511+0000] {subprocess.py:93} INFO - Loading table: customer_feb (120 rows)
[2026-06-03T13:07:12.512+0000] {subprocess.py:93} INFO - Loading table: customer_jan (100 rows)
[2026-06-03T13:07:12.512+0000] {subprocess.py:93} INFO - Loading table: customer_march (150 rows)
[2026-06-03T13:07:12.513+0000] {subprocess.py:93} INFO - Processed total rows: 370
[2026-06-03T13:07:12.515+0000] {subprocess.py:93} INFO - Completed: 370 rows processed
[2026-06-03T13:07:12.516+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:07:12.517+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 61, in main
[2026-06-03T13:07:12.518+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:07:12.519+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:07:12.529+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:07:12.530+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:07:12.531+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:07:12.533+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:07:12.534+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:12.535+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:12.536+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:07:12.536+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:12.537+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:07:12.539+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 94, in <module>
[2026-06-03T13:07:12.540+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:07:12.541+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 79, in main
[2026-06-03T13:07:12.542+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:07:12.543+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:07:12.544+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:07:12.545+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:07:12.547+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:07:12.548+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:07:12.549+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:12.884+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:07:12.892+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:07:12.918+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:07:12.934+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_5, run_id=manual__2026-06-03T13:06:46.724541+00:00, execution_date=20260603T130646, start_date=20260603T130648, end_date=20260603T130712
[2026-06-03T13:07:12.973+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 147 for task run_pipeline_5 (Bash command failed. The command returned a non-zero exit code 1.; 2370)
[2026-06-03T13:07:13.030+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:07:13.076+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:07:13.081+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
